k8s/apps/meal-planner/chronodrive-proxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chronodrive-proxy
spec:
  type: ClusterIP
  selector:
    component: chronodrive-proxy
  ports:
    - name: proxy
      port: 1055
      targetPort: proxy
